Update LightSide.bat file for Windows